# WorldCalib

./: .env.example  .gitignore  ABLATION_calibration_value.md  GOOGLEDOC_WMC_vs_NOWMC.md  README.md  REPORT.md  experiment_results_agentic.md  memomemo_candidate.memomemo_astropy__astropy-13398.json  memomemo_candidate.memomemo_astropy__astropy-13977.json  memomemo_candidate.memomemo_astropy__astropy-14096.json  memomemo_candidate.memomemo_astropy__astropy-14508.json  memomemo_candidate.memomemo_astropy__astropy-14539.json  memomemo_candidate.memomemo_astropy__astropy-14598.json  memomemo_candidate.memomemo_astropy__astropy-7166.json  memomemo_candidate.memomemo_astropy__astropy-7336.json  memomemo_candidate.memomemo_astropy__astropy-7671.json  memomemo_candidate.memomemo_astropy__astropy-8707.json  memomemo_candidate.memomemo_astropy__astropy-8872.json  memomemo_candidate.memomemo_django__django-10880.json  memomemo_candidate.memomemo_django__django-10973.json  memomemo_candidate.memomemo_django__django-10999.json  memomemo_candidate.memomemo_django__django-11066.json  memomemo_candidate.memomemo_django__django-11095.json  memomemo_candidate.memomemo_django__django-11119.json  memomemo_candidate.memomemo_django__django-11133.json  memomemo_candidate.memomemo_django__django-11141.json  memomemo_candidate.memomemo_django__django-11149.json  memomemo_candidate.memomemo_django__django-11163.json  memomemo_candidate.memomemo_django__django-11211.json  memomemo_candidate.memomemo_django__django-11239.json  memomemo_candidate.memomemo_django__django-11265.json  (+416 more)
(+220 files in other folders)
