[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worldcalib"
version = "0.1.0"
description = "Baseline LOCOMO + LongMemEval runners, carved out of Optimizer1 as a playground for world-model calibration research."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "PyYAML>=6.0",
  "mcp>=1.0",
  "openai>=1.40",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
worldcalib-optimize = "worldcalib.optimize_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"worldcalib.prompts" = ["**/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
